syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = ".;user";

service User {
    rpc ListUser (ListUserReq) returns (ListUserResp);
    rpc GetUserByMobile (GetUserByMobileReq) returns (UserItem);
    rpc GetUserByID (GetUserByIDReq) returns (UserItem);
    rpc AddUser (AddUserReq) returns (AddUserResp);
    rpc UpdateUser (UpdateUserReq) returns (google.protobuf.Empty);
    rpc CheckPassWord (CheckPassWoreReq) returns (CheckPassWordResp);
}

message CheckPassWoreReq {
    string password = 1;
    string encrypt_password = 2;
}

message CheckPassWordResp {

}

message UpdateUserReq {
    int32 id = 1;
    string nickname = 2;
    string gender = 3;
}

message AddUserReq {
    string mobile = 2;
    string password = 3;
    string nickname = 4;
}

message AddUserResp {
    string id = 1;
}

message GetUserByMobileReq {
    string mobile = 1;
}

message GetUserByIDReq {
    string id = 1;
}

message ListUserReq {
    int32 page = 1;
    int32 page_size = 2;
}

message ListUserResp {
    int32 total = 1;
    repeated UserItem data = 2;
}

message UserItem {
    int32 id = 1;
    string mobile = 2;
    string password = 3;
    string nickname = 4;
    int32 gender = 5;
    int32 role = 6;
}
